// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductCard should increment to counter productCard 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Product Card
  </h1>
  <span>
    0
  </span>
  <button
    onClick={[Function]}
  >
    Incrementar
  </button>
</div>
`;

exports[`ProductCard should view the component with custom ProductCard 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Jola Component
  </h1>
</div>
`;
